@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
+    91: AstroFloyd, 13/07/2010
+     - Store screen size + dpi in settings file iso paper size/ratio
+    
     90: AstroFloyd, 13/07/2010
      - Added routine eggletonplot_settings() to read write a settings file in the user's
        home directory
